# whisperworld

./: .gitignore  AI_INTEGRATION_TEST_REPORT.md  DEPLOYMENT_SETUP.md  LICENSE  README.md  REAL_VISION_SETUP.md  package-lock.json  package.json  railway.toml  render.yaml  test_api.py  vercel.json
.kiro/specs/whisper-world/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: conventions.md
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: supabase_client.py
backend/app/routers/: ambient.py  debug.py  identify.py  profile.py  session.py  sing.py
backend/app/services/: character_engine.py  conversation_agent.py  group_conversation_manager.py  location_service.py  song_engine.py  vision_engine.py
frontend/: .env  .env.example  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthGuard.tsx  CameraCapture.test.tsx  CameraCapture.tsx  CreatureCard.tsx  GroupSession.tsx  Header.tsx  OrientationGuard.tsx  SongPlayer.tsx  VoiceSession.tsx
frontend/src/pages/: AppPage.tsx  CameraPage.tsx  CreaturePage.tsx  Landing.tsx  SessionPage.tsx  SignIn.tsx  SignUp.tsx  VoiceSessionPage.tsx
frontend/src/services/: ambientSoundEngine.ts
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_retention_job.sql  004_find_nearby_profile_fn.sql
